@@ -240,6 +240,13 @@ will be given the opportunity to configure the network manually.
 
 </para><para>
 
+The next step is setting up your clock and time zone. The installer will
+try to contact a time server on the Internet to ensure the clock is set
+correcty. The time zone is based on the country selected earlier and the
+installer will only ask to select one if a country has multiple zones.
+
+</para><para>
+
 Now it is time to partition your disks. First you will be given the
 opportunity to automatically partition either an entire drive, or available
 free space on a drive (guided partitioning).
@@ -270,14 +277,6 @@ which can take a while. That is followed by installing a kernel.
 
 </para><para>
 
-The next steps are setting up your time zone and clock. The installer will
-try to select the correct settings automatically and will only ask if it
-cannot. This is followed by setting up user accounts. By default you will
-need to provide a password for the <quote>root</quote> (administrator)
-account and information necessary to create one regular user account.
-
-</para><para>
-
 The base system that was installed earlier is a working, but very minimal
 installation. To make the system more functional the next step allows you
 to install additional packages by selecting tasks. Before packages can be
@@ -287,6 +286,12 @@ The <quote>Standard system</quote> task will be selected by default and
 should normally be installed. Select the <quote>Desktop environment</quote>
 task if you would like to have a graphical desktop after the installation.
 See <xref linkend="pkgsel"/> for additional information about this step.
+
+</para><para>
+
+Partitioning is followed by setting up user accounts. By default you will
+need to provide a password for the <quote>root</quote> (administrator)
+account and information necessary to create one regular user account.
 
 </para><para>
 
