@@ -79,8 +79,9 @@ installation-guide (2007xxxx) UNRELEASED; urgency=low
       the selected location can be set (as that is a FAQ)
     - improve readability of partman section by using separate subsections for
       guided and manual partitioning
+  * howto: update for changes in the installation procedure.
 
- -- Frans Pop <fjp@debian.org>  Tue, 25 Dec 2007 10:21:55 +0100
+ -- Frans Pop <fjp@debian.org>  Sun, 30 Dec 2007 12:59:38 +0100
 
 installation-guide (20070319) unstable; urgency=low
 
